fixed sponsorship button alignment in burger menu

--- a/css/custom/navbar.css
+++ b/css/custom/navbar.css
@@ -111,10 +111,7 @@
 .navbar .highlight {
 	margin-top: 20px;
     margin-right: 25px;
-	padding-top: 5px !important;
-	padding-bottom: 5px !important;
-	padding-right: 5px !important;
-	padding-left: 5px !important;
+	padding: 5px !important;
 	background-color: white;
     color: #000000 !important;
     font-weight: 505;
@@ -136,6 +133,14 @@
 
     .navbar .navbar-nav .nav-link {
         padding: 10px 0;
+    }
+	
+	.navbar .highlight {
+        margin-top: -5px;
+		margin-bottom: -5px;		/* Remove top margin */
+        margin-right: 0; /* Remove right margin */
+        padding: 15px; /* Adjust padding */
+		width: 90px;
     }
 }
 
